Modified Follow Me button Configurations

--- a/Profile Share Modal/index.html
+++ b/Profile Share Modal/index.html
@@ -17,7 +17,7 @@
           <button class="share-profile" onclick="openModal()">
             <i class="fa-solid fa-share" ></i> Share My Profile
           </button>
-          <button class="follow-profile"><a href="https://www.linkedin.com/in/himanshu095/">Follow Me</a></button>
+          <button class="follow-profile" onclick="location.href = 'https://www.linkedin.com/in/himanshu095' ">Follow Me</a></button>
         </div>
       </div>
       <div class="floating-ele2"></div>
